feat: create contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,10 +41,10 @@
                     <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="#">About</a>
+                    <a class="nav-link" href="./about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
+                    <a class="nav-link active" href="#">Contact</a>
                   </li>
                 </ul>
             </div>
@@ -56,39 +56,9 @@
             </div>
           </nav>
         <div class="container">
-            <h1>About</h1>
-            <p>
-                This project come to life after I struggled to keep track of the campaigns that I 
-                was playing. It happened more than once of getting lost on what was done between 
-                notes and pictures. Also trying to use a spreadsheet wasn't very helpfull because 
-                I usually don't have a laptod around and spreadsheet isn't very mobile friendelly 
-            </p>
-            <p>
-                That's why I create this page, I tried to create a easy way to keep track of your 
-                board games by just accessing a page. And I also tried to build it focusing on mobile 
-                user, because we have a high chance of someone carrying a phone.
-            </p>
-            <p>
-                I have plans to include more games and continue improving this page, but that takes
-                time. Also it's little complex to include a game that I didn't played and don't know 
-                how the players keep track of the campaign. So if exists a game that you really wish 
-                to be included you can head to the project Github 
-                <a href="https://github.com/jdrcabral/boardgametracker">page</a> and create 
-                an issue requesting that game. And if you know a little bit about coding, you can 
-                create the game yourself and I will happily review your code and include you changes.
-            </p>
-            <p>
-                And if you are wondering about it becoming a mobile application, I have another project 
-                for that. At the moment it isn't in a working stage and I at this moment I don't have 
-                much time to work on it, but if you want to give a look at it you can see it 
-                <a href="https://github.com/jdrcabral/bgcampaigntracker">here</a>.</p>
+            <h1>Contact Form</h1>
+            <p>If you have any comments, suggestion or want to report a bug, please fill the following form</p>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeA1NJvND-kXmskXCecEv0I4e7B3wX-6T5v1aN_IhtYDg53gw/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
         </div>
-        <footer class="footer mt-auto py-3 bg-light">
-          <div class="container">
-            <div class="alert alert-warning" role="alert">
-              Found any issue or have any comment, please enter in <a href="../contact.html">contact</a>
-            </div>
-          </div>
-        </footer>     
     </body>
 </html>
