--- a/pages/boardgame/dark_souls.html
+++ b/pages/boardgame/dark_souls.html
@@ -44,6 +44,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="../about.html">About</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../contact.html">Contact</a>
+                  </li>
                 </ul>
             </div>
             <a href="https://github.com/jdrcabral/boardgametracker" target="_blank" class="d-flex">
@@ -912,6 +915,13 @@
                 <button type="button" class="btn btn-danger" onclick="clearAllData()">Clear Data</button>
             </div>
         </div>
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container">
+              <div class="alert alert-warning" role="alert">
+                Found any issue or have any comment, please enter in <a href="../contact.html">contact</a>
+              </div>
+            </div>
+        </footer> 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
         <script src="../../js/lib/cardBuilder.js"></script>
         <script src="../../js/modules/io.js"></script>
