--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
               <div class="alert alert-warning" role="alert">
-                Found any issue or have any comment, please enter in <a href="../contact.html">contact</a>
+                Found any issue or have any comment, please enter in <a href="pages/contact.html">contact</a>
               </div>
             </div>
         </footer>    
