feat: core resident evil 2

--- a/pages/about.html
+++ b/pages/about.html
@@ -86,7 +86,7 @@
         <footer class="footer mt-auto py-3 bg-light">
           <div class="container">
             <div class="alert alert-warning" role="alert">
-              Found any issue or have any comment, please enter in <a href="../contact.html">contact</a>
+              Found any issue or have any comment, please enter in <a href="./contact.html">contact</a>
             </div>
           </div>
         </footer>     
